--- a/Source/Calcium/Assets/UI/Main.storyboard
+++ b/Source/Calcium/Assets/UI/Main.storyboard
@@ -207,11 +207,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BagBaseplate.png" id="tcD-dc-Vf1">
-                                                    <rect key="frame" x="1" y="0.0" width="305" height="150"/>
+                                                    <rect key="frame" x="1" y="6" width="305" height="150"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bag.xml" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AlQ-CL-NWT">
-                                                    <rect key="frame" x="134" y="60" width="161" height="47"/>
+                                                    <rect key="frame" x="134" y="66" width="161" height="47"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="38"/>
                                                     <color key="textColor" red="0.42352941179999998" green="0.42352941179999998" blue="0.42352941179999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -220,7 +220,7 @@
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creator of this app" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iTL-td-Lhw">
-                                                    <rect key="frame" x="122" y="105" width="174" height="30"/>
+                                                    <rect key="frame" x="122" y="111" width="174" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="20"/>
                                                     <color key="textColor" red="0.42352941179999998" green="0.42352941179999998" blue="0.42352941179999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -239,11 +239,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ElectiBaseplate.png" id="U3d-zj-TxQ">
-                                                    <rect key="frame" x="1" y="0.0" width="305" height="150"/>
+                                                    <rect key="frame" x="1" y="-7" width="305" height="150"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electimon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ow9-C1-ydN">
-                                                    <rect key="frame" x="122" y="60" width="174" height="47"/>
+                                                    <rect key="frame" x="122" y="53" width="174" height="47"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="35"/>
                                                     <color key="textColor" red="0.42352941179999998" green="0.42352941179999998" blue="0.42352941179999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -252,7 +252,7 @@
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="electi" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Z5O-A8-Hci">
-                                                    <rect key="frame" x="122" y="105" width="174" height="30"/>
+                                                    <rect key="frame" x="122" y="98" width="174" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Italic" family="Helvetica Neue" pointSize="20"/>
                                                     <color key="textColor" red="0.42352941179999998" green="0.42352941179999998" blue="0.42352941179999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -619,7 +619,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Wa9-1i-RvB"/>
-                                    <barButtonItem image="PictureModeGlyph.png" id="CzD-y7-NfY">
+                                    <barButtonItem systemItem="camera" id="CzD-y7-NfY">
                                         <connections>
                                             <action selector="modeSwitch:" destination="PAh-4J-EHy" id="BZV-Vr-xKD"/>
                                         </connections>
@@ -628,7 +628,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="OLa-y9-vKZ"/>
                                     <barButtonItem id="qaV-b6-yrP">
                                         <view key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" id="kgW-ux-RjX">
-                                            <rect key="frame" x="62" y="7" width="195" height="30"/>
+                                            <rect key="frame" x="61" y="7" width="195" height="30"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type something in..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pro-8I-4AN">
@@ -656,6 +656,7 @@
                                         </view>
                                     </barButtonItem>
                                     <barButtonItem image="Send.png" id="fZ8-Wy-Tj4">
+                                        <color key="tintColor" red="0.52456477121367906" green="0.64938287445417309" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="sendButton:" destination="PAh-4J-EHy" id="geZ-ni-c2R"/>
                                         </connections>
@@ -830,7 +831,6 @@
         <image name="HelpButton.png" width="48" height="40"/>
         <image name="LCellBG.png" width="294" height="119"/>
         <image name="PHPref.png" width="48" height="40"/>
-        <image name="PictureModeGlyph.png" width="25" height="25"/>
         <image name="Send.png" width="23" height="20"/>
         <image name="SidebarTopLeader.png" width="260" height="431"/>
         <image name="TrashButton.png" width="48" height="40"/>
