--- a/Source/Calcium/Assets/UI/Main.storyboard
+++ b/Source/Calcium/Assets/UI/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13F1911" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" initialViewController="wFt-If-Q7F">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" initialViewController="wFt-If-Q7F">
     <dependencies>
         <deployment defaultVersion="1280" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -174,7 +174,7 @@
                                                     <rect key="frame" x="13" y="14" width="294" height="120"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calcium" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e6q-Ev-KDu">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uwabbit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e6q-Ev-KDu">
                                                     <rect key="frame" x="138" y="37" width="161" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="38"/>
@@ -206,7 +206,7 @@
                                                     <rect key="frame" x="13" y="4" width="294" height="120"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calcium" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MEN-PF-8Xl">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uwabbit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MEN-PF-8Xl">
                                                     <rect key="frame" x="138" y="27" width="161" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="38"/>
@@ -571,7 +571,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Wa9-1i-RvB"/>
                                     <barButtonItem image="PictureModeGlyph.png" id="CzD-y7-NfY">
                                         <connections>
-                                            <action selector="modeSwitch:" destination="PAh-4J-EHy" id="BZV-Vr-xKD"/>
+                                            <action selector="takePhoto:" destination="PAh-4J-EHy" id="9WD-79-jkE"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="3CR-Rs-Py5"/>
@@ -638,7 +638,7 @@
                         <outlet property="bubbleTableView" destination="517-Wc-wuN" id="cDi-c7-IOZ"/>
                         <outlet property="inputField" destination="pdZ-WF-lAs" id="N1y-S5-hQs"/>
                         <outlet property="inputFieldPlaceholder" destination="pro-8I-4AN" id="Xwz-B5-4Y1"/>
-                        <outlet property="modeButton" destination="CzD-y7-NfY" id="LWX-Ew-NA4"/>
+                        <outlet property="modeButton" destination="CzD-y7-NfY" id="ghk-Cj-Vvm"/>
                         <outlet property="pill" destination="kgW-ux-RjX" id="oWo-Cz-9mZ"/>
                         <outlet property="sendButton" destination="fZ8-Wy-Tj4" id="bHD-g0-N5r"/>
                         <outlet property="toolbar" destination="BGA-Gf-FqA" id="dg7-9c-1bl"/>
